--- a/public/courses/rmsc2020/contentr/index.html
+++ b/public/courses/rmsc2020/contentr/index.html
@@ -571,7 +571,7 @@ Week 0 Help - R and R Studio Download and Install
 <th align="center">📒 <a href="https://rstudio-education.github.io/hopr/r-objects.html#matrices">Reading-5.3, 5.8</a></th>
 <th align="center">📊 <a href="https://hellor.netlify.app/cheatsheets/baser.pdf">Cheat sheet</a></th>
 <th align="center">📎 <a href="/Slides/2020s1STA5173_0/MSc_tutorials/Tutorial1_Questions_MSC_2020.pdf">Problems</a></th>
-<th align="center">🔖Answers</th>
+<th align="center">🔖 Answers</th>
 </tr>
 </thead>
 </table>
@@ -582,10 +582,10 @@ Week 0 Help - R and R Studio Download and Install
 <table>
 <thead>
 <tr>
-<th align="center">📚Slides</th>
-<th align="center">📒 Reading</th>
-<th align="center">📊 Data Sets</th>
-<th align="center">📎 Problems</th>
+<th align="center">📚<a href="/Slides/2020s1STA5173_0/l2.html">Slides</a></th>
+<th align="center">📒 <a href="https://rstudio-education.github.io/hopr/basics.html#functions">Reading-Section 2.3</a></th>
+<th align="center">📊 Data Sets - <code>iris</code></th>
+<th align="center">📎 Problems - EDA on <code>iris</code></th>
 <th align="center">🔖Answers</th>
 </tr>
 </thead>
