--- a/static/Slides/2020s1STA5173_0/l3.html
+++ b/static/Slides/2020s1STA5173_0/l3.html
@@ -374,7 +374,7 @@ mean(na.rm = FALSE, mydata)
 
 
 ```
-[1] 4761.843
+[1] 4761.693
 ```
 
 ⚠️ Even though it works, do not change the order of the arguments too much.
@@ -391,7 +391,7 @@ mean(mydata, trim=0)
 ```
 
 ```
-[1] 4761.843
+[1] 4761.693
 ```
 
 ```r
@@ -399,7 +399,7 @@ mean(mydata) # Default value for trim is 0
 ```
 
 ```
-[1] 4761.843
+[1] 4761.693
 ```
 
 
@@ -408,7 +408,7 @@ mean(mydata, trim=0.1)
 ```
 
 ```
-[1] -0.03532758
+[1] -0.1329687
 ```
 
 
@@ -417,7 +417,7 @@ mean(mydata, tr=0.1) # Partial Matching
 ```
 
 ```
-[1] -0.03532758
+[1] -0.1329687
 ```
 ---
 
@@ -955,7 +955,7 @@ Resourses: You can follow the DataCamp tutorial [here](https://www.datacamp.com/
 
 Use only 1 A4 sheet, you may use both sides.
 
-Assignment due date: 6 March 2020
+Assignment due date: 6 September 2020
 
 ---
 
@@ -1363,7 +1363,7 @@ head(iris)
 
 class: center, middle
 
-Slides available at: hellor.netlify.com
+Slides available at: https://thiyanga.netlify.app/courses/rmsc2020/contentr/
 
 All rights reserved by [Thiyanga S. Talagala](https://thiyanga.netlify.com/)
     </textarea>
