--- a/public/courses/rmsc2020/contentr/index.html
+++ b/public/courses/rmsc2020/contentr/index.html
@@ -597,8 +597,8 @@ Week 0 Help - R and R Studio Download and Install
 <table>
 <thead>
 <tr>
-<th align="center">📚Slides</th>
-<th align="center">📒 Reading</th>
+<th align="center">📚<a href="/Slides/2020s1STA5173_0/l4.html">Slides</a></th>
+<th align="center">📒 <a href="https://rstudio-education.github.io/hopr/basics.html#functions">Reading-Section 2.3</a></th>
 <th align="center">📊 Data Sets</th>
 <th align="center">📎 Problems</th>
 <th align="center">🔖Answers</th>
