--- a/static/Slides/2020s1STA5173_0/l4.html
+++ b/static/Slides/2020s1STA5173_0/l4.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
+<html lang="" xml:lang="">
   <head>
-    <title>STA 326 2.0 Programming and Data Analysis with R</title>
+    <title>STA 517 3.0 Programming and Statistical Computing with R</title>
     <meta charset="utf-8" />
     <meta name="author" content="Dr Thiyanga Talagala" />
-    <meta name="date" content="2020-03-03" />
+    <meta name="date" content="2020-09-06" />
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/remark-css/default-fonts.css" rel="stylesheet" />
     <link href="libs/remark-css/duke-blue.css" rel="stylesheet" />
@@ -18,10 +18,10 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# STA 326 2.0 Programming and Data Analysis with R
+# STA 517 3.0 Programming and Statistical Computing with R
 ## Lesson 4: Writing Functions in R
 ### Dr Thiyanga Talagala
-### 2020-03-03
+### 2020-09-06
 
 ---
 
@@ -337,7 +337,7 @@ class: duke-orange, center, middle
 
 Rewrite `rescale_minmax` so that `-Inf` is set to 0, and `Inf` is mapped to 1.
 
-<div class="countdown" id="timer_5e7ec9d6" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f5426ee" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -353,7 +353,7 @@ R for Data Science - Exercise 19.2.1, Question 3
 
 &lt;iframe src="https://r4ds.had.co.nz/functions.html" width="100%" height="400px"&gt;&lt;/iframe&gt;
 
-<div class="countdown" id="timer_5e7eca0d" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f5428d3" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -369,7 +369,7 @@ R for Data Science - Exercise 19.2.1, Question 4
 
 &lt;iframe src="https://r4ds.had.co.nz/functions.html" width="100%" height="400px"&gt;&lt;/iframe&gt;
 
-<div class="countdown" id="timer_5e7ecc53" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f54280f" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -404,7 +404,7 @@ Help:
 
 ![](slr2.png)
 
-<div class="countdown" id="timer_5e7ecc59" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f5429aa" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -413,7 +413,7 @@ Help:
 Write a function to calculate confidence intervals for mean.
 `$$\bar{x} \pm t_{\alpha/2, (n-1)}\frac{s}{\sqrt(n)}$$`
 
-<div class="countdown" id="timer_5e7ec9c6" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f5428dc" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -672,7 +672,7 @@ Help:
 
 `lubridate::now()` and `lubridate::hour()`
 
-<div class="countdown" id="timer_5e7ecbc4" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f54279c" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -772,7 +772,7 @@ class: duke-orange, center, middle
 
 Write a function to count the number of even numbers in a vector.
 
-<div class="countdown" id="timer_5e7eccba" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f542a0d" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">08</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -929,11 +929,105 @@ for (i in feelings){
 [1] "There is nothing to fear"
 ```
 
+---
+# Problem 1
+
+Write a function to prints out standard random normal numbers (use rnorm()) but stops (breaks) if you get a number bigger than 1.
+
+
+Using next adapt the loop from last exercise so that doesn’t print negative numbers.
+
+---
+
+# Problem 2
+
+Write a function to simulate the flip a coin `\(n\)` times, keeping track of the individual outcomes (1 = heads, 0 = tails) in a vector that
+you preallocte. Assume `\(P(H)=0.5\)`.
+
+Example output:
+
+
+
+
+```r
+flip_coin(10)
+```
+
+```
+ [1] "H" "H" "H" "H" "T" "T" "T" "H" "T" "H"
+```
+
+
+---
+
+```r
+flip_coin &lt;- function(n){
+  out &lt;- numeric(n)
+  for (i in 1:n){
+    coin.out &lt;- rbinom(1, p=0.5, n=1)
+    if(coin.out==1){
+      out[i] &lt;- "H"
+    } else {
+      out[i] &lt;- "T"
+    }
+  }
+  out
+}
+```
+
+
+```r
+flip_coin(10)
+```
+
+```
+ [1] "T" "H" "H" "T" "H" "H" "T" "H" "T" "T"
+```
+
+---
+
+- Modify the function so that it takes another argument, which will be the `\(P(H)\)`.
+
+- Run the function 10, 100, 1000 and 10000 times with `\(P(H)=0.8\)` and report the proportion of times that head is selected.
+
+---
+
+
+# Problem 3
+
+Write a function to calculate the median.
+
+help:
+
+
+```r
+5%%2
+```
+
+```
+[1] 1
+```
+
+```r
+4%%2
+```
+
+```
+[1] 0
+```
+
+---
+
+# Problem 4
+
+Write a function to calculate the correlation coefficient
+
+`$$r=\frac{\sum_{i=1}^{n}(x_i-\bar{x})(y_i-\bar{y})}{\sqrt{\sum_{i=1}^n(x_i-\bar{x})^2\sum_{i=1}^n(y_i-\bar{y})^2}}$$`
 
 ---
 class: center, middle
 
-Slides available at: hellor.netlify.com
+Slides available at: https://thiyanga.netlify.app/courses/rmsc2020/contentr/
 
 All rights reserved by [Thiyanga S. Talagala](https://thiyanga.netlify.com/)
     </textarea>
@@ -983,6 +1077,32 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+(function() {
+  "use strict"
+  // Replace <script> tags in slides area to make them executable
+  var scripts = document.querySelectorAll(
+    '.remark-slides-area .remark-slide-container script'
+  );
+  if (!scripts.length) return;
+  for (var i = 0; i < scripts.length; i++) {
+    var s = document.createElement('script');
+    var code = document.createTextNode(scripts[i].textContent);
+    s.appendChild(code);
+    var scriptAttrs = scripts[i].attributes;
+    for (var j = 0; j < scriptAttrs.length; j++) {
+      s.setAttribute(scriptAttrs[j].name, scriptAttrs[j].value);
+    }
+    scripts[i].parentElement.replaceChild(s, scripts[i]);
+  }
+})();
+(function() {
+  var links = document.getElementsByTagName('a');
+  for (var i = 0; i < links.length; i++) {
+    if (/^(https?:)?\/\//.test(links[i].getAttribute('href'))) {
+      links[i].target = '_blank';
+    }
+  }
+})();
 // adds .remark-code-has-line-highlighted class to <pre> parent elements
 // of code chunks containing highlighted lines with class .remark-code-line-highlighted
 (function(d) {
@@ -1000,17 +1120,6 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
   }
   preParents.forEach(p => p.classList.add("remark-code-has-line-highlighted"));
 })(document);</script>
-
-<script>
-(function() {
-  var links = document.getElementsByTagName('a');
-  for (var i = 0; i < links.length; i++) {
-    if (/^(https?:)?\/\//.test(links[i].getAttribute('href'))) {
-      links[i].target = '_blank';
-    }
-  }
-})();
-</script>
 
 <script>
 slideshow._releaseMath = function(el) {
