--- a/public/courses/rmsc2020/contentr/index.html
+++ b/public/courses/rmsc2020/contentr/index.html
@@ -571,7 +571,7 @@ Week 0 Help - R and R Studio Download and Install
 <th align="center">📒 <a href="https://rstudio-education.github.io/hopr/r-objects.html#matrices">Reading-5.3, 5.8</a></th>
 <th align="center">📊 <a href="https://hellor.netlify.app/cheatsheets/baser.pdf">Cheat sheet</a></th>
 <th align="center">📎 <a href="/Slides/2020s1STA5173_0/MSc_tutorials/Tutorial1_Questions_MSC_2020.pdf">Problems</a></th>
-<th align="center">🔖 Answers</th>
+<th align="center">🔖 <a href="/Slides/2020s1STA5173_0/MSc_tutorials/Tutorial1_Ans_MSC_2020.pdf">Answers</a></th>
 </tr>
 </thead>
 </table>
@@ -605,6 +605,7 @@ Week 0 Help - R and R Studio Download and Install
 </tr>
 </thead>
 </table>
+<p><a href="/Slides/2020s1STA5173_0/inclassanswers/l4ans.pdf">💻</a></p>
 <blockquote>
 <p>Week 5-6: Discussion/practical (in class)</p>
 </blockquote>
