--- a/public/courses/index.html
+++ b/public/courses/index.html
@@ -461,6 +461,9 @@
 <div class="universal-wrapper">
   
   <div class="article-style"><p><img src="/CO/education.jpg" alt=""></p>
+<h1 id="teaching-apps">Teaching Apps</h1>
+<p><a href="https://statisticsmart.shinyapps.io/SimpleLinearRegression/">Simple Linear Regression</a></p>
+<hr>
 <h1 id="2020">2020</h1>
 <h2 id="semester-2">Semester 2</h2>
 <p>Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura (USJ)</p>
