--- a/public/courses/regression2020/contentreg/index.html
+++ b/public/courses/regression2020/contentreg/index.html
@@ -593,7 +593,7 @@
 <th align="center">📚<a href="https://edify-thiyanga.netlify.app/regression/regression2.html#1">Slides</a></th>
 <th align="center">📒 [Reading-Ch2/2.2.2 Introduction to Linear Regression Analysis]</th>
 <th align="center">📊 Data Sets - <code>alr3::heights</code></th>
-<th align="center">📎 Problems</th>
+<th align="center">📎 <a href="https://edify-thiyanga.netlify.app/regression/tutorial_1.pdf">Problems</a></th>
 <th align="center">🔖Answers</th>
 </tr>
 </thead>
