--- a/public/courses/rmsc2020/contentr/index.html
+++ b/public/courses/rmsc2020/contentr/index.html
@@ -586,7 +586,7 @@ Week 0 Help - R and R Studio Download and Install
 <th align="center">📒 <a href="https://rstudio-education.github.io/hopr/basics.html#functions">Reading-Section 2.3</a></th>
 <th align="center">📊 Data Sets - <code>iris</code></th>
 <th align="center">📎 Problems - EDA on <code>iris</code></th>
-<th align="center">🔖Answers - In class discussion (06 Sep 2020)</th>
+<th align="center">🔖Answers - In class discussion (13 Sep 2020)</th>
 </tr>
 </thead>
 </table>
@@ -606,9 +606,6 @@ Week 0 Help - R and R Studio Download and Install
 </thead>
 </table>
 <p><a href="/Slides/2020s1STA5173_0/inclassanswers/l4ans.pdf">💻</a></p>
-<blockquote>
-<p>Week 5-6: Discussion/practical (in class)</p>
-</blockquote>
 <h3 id="week-5">Week 5</h3>
 <ul>
 <li>Introduction to the tidyverse, pipe operator and data import and export</li>
@@ -616,7 +613,7 @@ Week 0 Help - R and R Studio Download and Install
 <table>
 <thead>
 <tr>
-<th align="center">📚Slides</th>
+<th align="center">📚 <a href="/Slides/2020s1STA5173_0/l4.html">Slides</a></th>
 <th align="center">📒 Reading</th>
 <th align="center">📊 Data Sets</th>
 <th align="center">📎 Problems</th>
