--- a/public/courses/regression2020/contentreg/index.html
+++ b/public/courses/regression2020/contentreg/index.html
@@ -34,7 +34,7 @@
   Simple linear regression
   Terminologies
   Correlation
-       📚Slides 📒 [Reading-Ch1 Introduction to Linear Regression Analysis] 📊 Data Sets - anscombe 📎 Problems - Install R and R studio 🔖Answers    Week 2   Simple linear regression (cont.">
+       📚Slides 📒 [Reading-Ch1 Introduction to Linear Regression Analysis] 📊 Data Sets - anscombe 📎 Problems - Install R and R studio 🔖Answers    Week 2 - 3   Simple linear regression (cont.">
 
   
   <link rel="alternate" hreflang="en-us" href="/courses/regression2020/contentreg/">
@@ -135,7 +135,7 @@
   Simple linear regression
   Terminologies
   Correlation
-       📚Slides 📒 [Reading-Ch1 Introduction to Linear Regression Analysis] 📊 Data Sets - anscombe 📎 Problems - Install R and R studio 🔖Answers    Week 2   Simple linear regression (cont."><meta property="og:image" content="/img/icon-192.png">
+       📚Slides 📒 [Reading-Ch1 Introduction to Linear Regression Analysis] 📊 Data Sets - anscombe 📎 Problems - Install R and R studio 🔖Answers    Week 2 - 3   Simple linear regression (cont."><meta property="og:image" content="/img/icon-192.png">
   <meta property="twitter:image" content="/img/icon-192.png"><meta property="og:locale" content="en-us">
   
     
@@ -510,8 +510,7 @@
     <li>
       <ul>
         <li><a href="#week-1">Week 1</a></li>
-        <li><a href="#week-2">Week 2</a></li>
-        <li><a href="#week-3">Week 3</a></li>
+        <li><a href="#week-2---3">Week 2 - 3</a></li>
         <li><a href="#week-4">Week 4</a></li>
         <li><a href="#week-5">Week 5</a></li>
         <li><a href="#week-6">Week 6</a></li>
@@ -575,7 +574,7 @@
 </tr>
 </thead>
 </table>
-<h3 id="week-2">Week 2</h3>
+<h3 id="week-2---3">Week 2 - 3</h3>
 <ul>
 <li>
 <p>Simple linear regression (cont.)</p>
@@ -600,7 +599,7 @@
 </tr>
 </thead>
 </table>
-<h3 id="week-3">Week 3</h3>
+<h3 id="week-4">Week 4</h3>
 <ul>
 <li>
 <p>Simple linear regression (cont.)</p>
@@ -612,9 +611,6 @@
 <p>Coefficient of determination</p>
 </li>
 </ul>
-</li>
-<li>
-<p>Basics of R programming</p>
 </li>
 </ul>
 <table>
@@ -628,14 +624,15 @@
 </tr>
 </thead>
 </table>
-<h3 id="week-4">Week 4</h3>
+<blockquote>
+<p>Week 5-6: Discussion/practical (in class)</p>
+</blockquote>
+<h3 id="week-5">Week 5</h3>
 <pre><code>- Hypothesis testing on the slope and intercept
 
 - Interval estimation in simple linear regression  
 
 - Prediction of new observations: point estimates and prediction intervals
-
-- Coefficient of determination
 
 - Regression through the origin
 </code></pre>
@@ -672,23 +669,6 @@
 </li>
 </ul>
 </li>
-</ul>
-<table>
-<thead>
-<tr>
-<th align="center">📚Slides</th>
-<th align="center">📒 Reading</th>
-<th align="center">📊 Data Sets</th>
-<th align="center">📎 Problems</th>
-<th align="center">🔖Answers</th>
-</tr>
-</thead>
-</table>
-<blockquote>
-<p>Week 5-6: Discussion/practical (in class)</p>
-</blockquote>
-<h3 id="week-5">Week 5</h3>
-<ul>
 <li>
 <p>Model adequacy checking</p>
 <ul>
