--- a/public/courses/sta33120_stochastic_processes_2020/contentr_stochastic/index.html
+++ b/public/courses/sta33120_stochastic_processes_2020/contentr_stochastic/index.html
@@ -30,9 +30,9 @@
   
   <meta name="description" content="Here is your road map for the course!
 Week 1  Introduction  Week 2 - 3  Markov Chains  📚 Individual Assignment - week 3
-Week 4  Classification of states  Week 5  Limiting Probabilities  Week (1 September 2020) Holiday
-Week 6  Continuous Parameter Markov Chains  Week 7 📚 In-class assignment
- Poisson Process (cont.), Interarrival and Waiting Time Distributions   END">
+Week 4  Classification of states  Week 5  Limiting Probabilities  Week ( 1 September 2020 ) Holiday
+Week 6  Continuous Parameter Markov Chains  Week 7 - 8 Week 7 📚 In-class assignment
+Week 7 - 8  Poisson Process (cont.">
 
   
   <link rel="alternate" hreflang="en-us" href="/courses/sta33120_stochastic_processes_2020/contentr_stochastic/">
@@ -129,9 +129,9 @@ Week 6  Continuous Parameter Markov Chains  Week 7 📚 In-class assignment
   <meta property="og:title" content="STA 331 2.0 Stochastic Processes | THIYANGA TALAGALA">
   <meta property="og:description" content="Here is your road map for the course!
 Week 1  Introduction  Week 2 - 3  Markov Chains  📚 Individual Assignment - week 3
-Week 4  Classification of states  Week 5  Limiting Probabilities  Week (1 September 2020) Holiday
-Week 6  Continuous Parameter Markov Chains  Week 7 📚 In-class assignment
- Poisson Process (cont.), Interarrival and Waiting Time Distributions   END"><meta property="og:image" content="/img/icon-192.png">
+Week 4  Classification of states  Week 5  Limiting Probabilities  Week ( 1 September 2020 ) Holiday
+Week 6  Continuous Parameter Markov Chains  Week 7 - 8 Week 7 📚 In-class assignment
+Week 7 - 8  Poisson Process (cont."><meta property="og:image" content="/img/icon-192.png">
   <meta property="twitter:image" content="/img/icon-192.png"><meta property="og:locale" content="en-us">
   
     
@@ -501,9 +501,9 @@ Week 6  Continuous Parameter Markov Chains  Week 7 📚 In-class assignment
         <li><a href="#week-2---3">Week 2 - 3</a></li>
         <li><a href="#week-4">Week 4</a></li>
         <li><a href="#week-5">Week 5</a></li>
-        <li><a href="#week-1-september-2020">Week (1 September 2020)</a></li>
+        <li><a href="#week--1-september-2020-">Week ( 1 September 2020 )</a></li>
         <li><a href="#week-6">Week 6</a></li>
-        <li><a href="#week-7">Week 7</a></li>
+        <li><a href="#week-7---8">Week 7 - 8</a></li>
       </ul>
     </li>
   </ul>
@@ -539,14 +539,16 @@ Week 6  Continuous Parameter Markov Chains  Week 7 📚 In-class assignment
 <ul>
 <li><a href="/Slides/2020s2StochasticProcesses/4_stochastic_processes_2020.pdf">Limiting Probabilities</a></li>
 </ul>
-<h3 id="week-1-september-2020">Week (1 September 2020)</h3>
+<h3 id="week--1-september-2020-">Week ( 1 September 2020 )</h3>
 <p>Holiday</p>
 <h3 id="week-6">Week 6</h3>
 <ul>
 <li><a href="/Slides/2020s2StochasticProcesses/5_stochastic_processes_2020.pdf">Continuous Parameter Markov Chains</a></li>
 </ul>
-<h3 id="week-7">Week 7</h3>
+<h3 id="week-7---8">Week 7 - 8</h3>
+<h5 id="week-7">Week 7</h5>
 <p>📚 In-class assignment</p>
+<h5 id="week-7---8-1">Week 7 - 8</h5>
 <ul>
 <li><a href="/Slides/2020s2StochasticProcesses/6_stochastic_processes_2020.pdf">Poisson Process (cont.), Interarrival and Waiting Time Distributions</a></li>
 </ul>
