update with week5 slides

--- a/public/courses/regression2020/contentreg/index.html
+++ b/public/courses/regression2020/contentreg/index.html
@@ -608,7 +608,10 @@
 <p>Model adequacy checking</p>
 </li>
 <li>
-<p>Coefficient of determination</p>
+<p>Introduction</p>
+</li>
+<li>
+<p>Residual Analysis</p>
 </li>
 </ul>
 </li>
@@ -628,14 +631,38 @@
 <p>Week 5-6: Discussion/practical (in class)</p>
 </blockquote>
 <h3 id="week-5">Week 5</h3>
-<pre><code>- Hypothesis testing on the slope and intercept
-
-- Interval estimation in simple linear regression  
-
-- Prediction of new observations: point estimates and prediction intervals
-
-- Regression through the origin
-</code></pre>
+<ul>
+<li>
+<p>Coefficient of determination</p>
+</li>
+<li>
+<p>Hypothesis testing on the slope and intercept</p>
+</li>
+<li>
+<p>Interval estimation in simple linear regression</p>
+</li>
+<li>
+<p>Prediction of new observations: point estimates and prediction intervals</p>
+</li>
+<li>
+<p>Regression through the origin</p>
+</li>
+<li>
+<p>Regression analysis with R</p>
+</li>
+</ul>
+<table>
+<thead>
+<tr>
+<th align="center">📚Slides</th>
+<th align="center">📒 Reading</th>
+<th align="center">📊 Data Sets</th>
+<th align="center">📎 Problems</th>
+<th align="center">🔖Answers</th>
+</tr>
+</thead>
+</table>
+<h3 id="week-6">Week 6</h3>
 <ul>
 <li>
 <p>Multiple linear regression</p>
@@ -670,17 +697,6 @@
 </ul>
 </li>
 <li>
-<p>Model adequacy checking</p>
-<ul>
-<li>
-<p>Introduction</p>
-</li>
-<li>
-<p>Residual Analysis</p>
-</li>
-</ul>
-</li>
-<li>
 <p>Transformations</p>
 <ul>
 <li>
@@ -693,32 +709,6 @@
 <p>Analytical methods for selecting a transformation</p>
 </li>
 </ul>
-</li>
-<li>
-<p>Introduction to tidyverse</p>
-</li>
-<li>
-<p>Introduction to exploratory data analysis with R</p>
-</li>
-<li>
-<p>Regression analysis with R</p>
-</li>
-</ul>
-<table>
-<thead>
-<tr>
-<th align="center">📚Slides</th>
-<th align="center">📒 Reading</th>
-<th align="center">📊 Data Sets</th>
-<th align="center">📎 Problems</th>
-<th align="center">🔖Answers</th>
-</tr>
-</thead>
-</table>
-<h3 id="week-6">Week 6</h3>
-<ul>
-<li>
-<p>Detection and treatment of outliers</p>
 </li>
 <li>
 <p>Problem discussion and Regression Analysis with R</p>
@@ -747,6 +737,9 @@
 </blockquote>
 <h3 id="week-8">Week 8</h3>
 <ul>
+<li>
+<p>Detection and treatment of outliers</p>
+</li>
 <li>
 <p>Lack of fit of regression model</p>
 <ul>
