--- a/public/courses/regression2020/contentreg/index.html
+++ b/public/courses/regression2020/contentreg/index.html
@@ -654,7 +654,7 @@
 <table>
 <thead>
 <tr>
-<th align="center">📚 <a href="https://edify-thiyanga.netlify.app/regression/regression5.html">Basics of R Programming</a></th>
+<th align="center">📚 <a href="https://edify-thiyanga.netlify.app/regression/regression4.html#1">Slides</a> <a href="https://edify-thiyanga.netlify.app/regression/regression5.html">Basics of R Programming</a></th>
 <th align="center">📒 Reading</th>
 <th align="center">📊 Data Sets</th>
 <th align="center">📎 Problems</th>
