--- a/public/courses/regression2020/contentreg/index.html
+++ b/public/courses/regression2020/contentreg/index.html
@@ -595,7 +595,7 @@
 <th align="center">📒 [Reading-Ch2/2.2.2 Introduction to Linear Regression Analysis]</th>
 <th align="center">📊 Data Sets - <code>alr3::heights</code></th>
 <th align="center">📎 <a href="https://edify-thiyanga.netlify.app/regression/tutorial_1.pdf">Problems</a></th>
-<th align="center">🔖Answers</th>
+<th align="center">🔖Answers - Discussions</th>
 </tr>
 </thead>
 </table>
@@ -655,10 +655,10 @@
 <thead>
 <tr>
 <th align="center">📚 <a href="https://edify-thiyanga.netlify.app/regression/regression4.html#1">Slides</a> <a href="https://edify-thiyanga.netlify.app/regression/regression5.html">Basics of R Programming</a></th>
-<th align="center">📒 Reading</th>
-<th align="center">📊 Data Sets</th>
-<th align="center">📎 Problems</th>
-<th align="center">🔖Answers</th>
+<th align="center">📒 Reading - Ch1 and Ch2 (2.3, 2.4)</th>
+<th align="center">📊 Data Set - <a href="/data/house.csv">house.csv</a></th>
+<th align="center">📎 <a href="https://edify-thiyanga.netlify.app/regression/simplelinearregression2">Problems </a></th>
+<th align="center">🔖Answers - Inclass discussion</th>
 </tr>
 </thead>
 </table>
