--- a/public/courses/regression2020/contentreg/index.html
+++ b/public/courses/regression2020/contentreg/index.html
@@ -654,7 +654,7 @@
 <table>
 <thead>
 <tr>
-<th align="center">📚 <a href="https://edify-thiyanga.netlify.app/regression/regression4.html#1">Slides</a> <a href="https://edify-thiyanga.netlify.app/regression/regression5.html">Basics of R Programming</a></th>
+<th align="center">📚 <a href="https://edify-thiyanga.netlify.app/regression/regression4.html#1">1. Slides</a> <a href="https://edify-thiyanga.netlify.app/regression/regression5.html">2. Basics of R Programming</a></th>
 <th align="center">📒 Reading - Ch1 and Ch2 (2.3, 2.4)</th>
 <th align="center">📊 Data Set - <a href="/data/house.csv">house.csv</a></th>
 <th align="center">📎 <a href="https://edify-thiyanga.netlify.app/regression/simplelinearregression2">Problems </a></th>
