--- a/public/courses/rmsc2020/contentr/index.html
+++ b/public/courses/rmsc2020/contentr/index.html
@@ -628,14 +628,24 @@ Week 0 Help - R and R Studio Download and Install
 <table>
 <thead>
 <tr>
-<th align="center">📚Slides</th>
+<th align="center">📚 <a href="/Slides/2020s1STA5173_0/l6.html">Slides</a></th>
 <th align="center">📒 Reading</th>
 <th align="center">📊 Data Sets</th>
-<th align="center">📎 Problems</th>
+<th align="center">📎 <a href="/Slides/2020s1STA5173_0/l6_problems.html">Problems</a></th>
 <th align="center">🔖Answers</th>
 </tr>
 </thead>
 </table>
+<ul>
+<li>Data wrangling with tidyr</li>
+</ul>
+<p>| 📚 <a href="/Slides/l7_reshape_data.html">Slides</a>  	| 📒 <a href="https://r4ds.had.co.nz/tidy-data.html">Reading -R4DS Ch12</a> 	| 📊 <a href="https://hellor.netlify.app/cheatsheets/data-wrangling-cheatsheet.pdf">Cheat sheet</a>	| 📎 Problems 	| 🔖Answers |]
+|:-:	|:-:	|:-:	|:-:	|:-:	|</p>
+<ul>
+<li>Data wrangling with dplyr - 1</li>
+</ul>
+<p>| 📚 <a href="/Slides/l7_data_manipulation_with_dplyr.html">Slides</a>  	| 📒 <a href="https://r4ds.had.co.nz/tidy-data.html">Reading -R4DS Ch12</a> 	| 📊 <a href="https://hellor.netlify.app/cheatsheets/data-wrangling-cheatsheet.pdf">Cheat sheet</a>	| 📎 <a href="https://hellor.netlify.app/problems/DataWrangling_Tutorial.pdf">Problems</a> 	| 🔖Answers |]
+|:-:	|:-:	|:-:	|:-:	|:-:	|</p>
 <blockquote>
 <p>Week 7: mid exam  (in class)</p>
 </blockquote>
@@ -645,7 +655,7 @@ Week 0 Help - R and R Studio Download and Install
 </blockquote>
 <h3 id="week-8">Week 8</h3>
 <ul>
-<li>Data wrangling</li>
+<li>Data wrangling - 2</li>
 </ul>
 <table>
 <thead>
