--- a/public/slides/2020s1STA5173_0/l7_reshaping_data.html
+++ b/public/slides/2020s1STA5173_0/l7_reshaping_data.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>STA 326 2.0 Programming and Data Analysis with R</title>
+    <title>STA 517 3.0 Programming and Statistical Computing with R</title>
     <meta charset="utf-8" />
     <meta name="author" content="Dr Thiyanga Talagala" />
+    <meta name="date" content="2020-09-27" />
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/remark-css/default-fonts.css" rel="stylesheet" />
     <link href="libs/remark-css/duke-blue.css" rel="stylesheet" />
@@ -15,10 +16,10 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# STA 326 2.0 Programming and Data Analysis with R
+# STA 517 3.0 Programming and Statistical Computing with R
 ## Reshaping Data
 ### Dr Thiyanga Talagala
-### Online distance learning/teaching materials during the COVID-19 outbreak.
+### 27 September 2020
 
 ---
 
