--- a/public/courses/rmsc2020/contentr/index.html
+++ b/public/courses/rmsc2020/contentr/index.html
@@ -639,13 +639,31 @@ Week 0 Help - R and R Studio Download and Install
 <ul>
 <li>Data wrangling with tidyr</li>
 </ul>
-<p>| 📚 <a href="/Slides/l7_reshape_data.html">Slides</a>  	| 📒 <a href="https://r4ds.had.co.nz/tidy-data.html">Reading -R4DS Ch12</a> 	| 📊 <a href="https://hellor.netlify.app/cheatsheets/data-wrangling-cheatsheet.pdf">Cheat sheet</a>	| 📎 Problems 	| 🔖Answers |]
-|:-:	|:-:	|:-:	|:-:	|:-:	|</p>
+<table>
+<thead>
+<tr>
+<th align="center">📚 <a href="/Slides/l7_reshape_data.html">Slides</a></th>
+<th align="center">📒 <a href="https://r4ds.had.co.nz/tidy-data.html">Reading -R4DS Ch12</a></th>
+<th align="center">📊 <a href="https://hellor.netlify.app/cheatsheets/data-wrangling-cheatsheet.pdf">Cheat sheet</a></th>
+<th align="center">📎 Problems</th>
+<th align="center">🔖Answers</th>
+</tr>
+</thead>
+</table>
 <ul>
 <li>Data wrangling with dplyr - 1</li>
 </ul>
-<p>| 📚 <a href="/Slides/l7_data_manipulation_with_dplyr.html">Slides</a>  	| 📒 <a href="https://r4ds.had.co.nz/tidy-data.html">Reading -R4DS Ch12</a> 	| 📊 <a href="https://hellor.netlify.app/cheatsheets/data-wrangling-cheatsheet.pdf">Cheat sheet</a>	| 📎 <a href="https://hellor.netlify.app/problems/DataWrangling_Tutorial.pdf">Problems</a> 	| 🔖Answers |]
-|:-:	|:-:	|:-:	|:-:	|:-:	|</p>
+<table>
+<thead>
+<tr>
+<th align="center">📚 <a href="/Slides/l7_data_manipulation_with_dplyr.html">Slides</a></th>
+<th align="center">📒 <a href="https://r4ds.had.co.nz/tidy-data.html">Reading -R4DS Ch12</a></th>
+<th align="center">📊 <a href="https://hellor.netlify.app/cheatsheets/data-wrangling-cheatsheet.pdf">Cheat sheet</a></th>
+<th align="center">📎 <a href="https://hellor.netlify.app/problems/DataWrangling_Tutorial.pdf">Problems</a></th>
+<th align="center">🔖Answers</th>
+</tr>
+</thead>
+</table>
 <blockquote>
 <p>Week 7: mid exam  (in class)</p>
 </blockquote>
