--- a/public/courses/sta33120_stochastic_processes_2020/contentr_stochastic/index.html
+++ b/public/courses/sta33120_stochastic_processes_2020/contentr_stochastic/index.html
@@ -32,7 +32,7 @@
 Week 1  Introduction  Week 2 - 3  Markov Chains  📚 Individual Assignment - week 3
 Week 4  Classification of states  Week 5  Limiting Probabilities  Week ( 1 September 2020 ) Holiday
 Week 6  Continuous Parameter Markov Chains  Week 7 - 8 Week 7 📚 In-class assignment
-Week 7 - 8  Poisson Process (cont.">
+Week 7 - 8   Poisson Process (cont.">
 
   
   <link rel="alternate" hreflang="en-us" href="/courses/sta33120_stochastic_processes_2020/contentr_stochastic/">
@@ -131,7 +131,7 @@ Week 7 - 8  Poisson Process (cont.">
 Week 1  Introduction  Week 2 - 3  Markov Chains  📚 Individual Assignment - week 3
 Week 4  Classification of states  Week 5  Limiting Probabilities  Week ( 1 September 2020 ) Holiday
 Week 6  Continuous Parameter Markov Chains  Week 7 - 8 Week 7 📚 In-class assignment
-Week 7 - 8  Poisson Process (cont."><meta property="og:image" content="/img/icon-192.png">
+Week 7 - 8   Poisson Process (cont."><meta property="og:image" content="/img/icon-192.png">
   <meta property="twitter:image" content="/img/icon-192.png"><meta property="og:locale" content="en-us">
   
     
@@ -550,7 +550,16 @@ Week 7 - 8  Poisson Process (cont."><meta property="og:image" content="/img/icon
 <p>📚 In-class assignment</p>
 <h5 id="week-7---8-1">Week 7 - 8</h5>
 <ul>
-<li><a href="/Slides/2020s2StochasticProcesses/6_stochastic_processes_2020.pdf">Poisson Process (cont.), Interarrival and Waiting Time Distributions</a></li>
+<li>
+<p><a href="/Slides/2020s2StochasticProcesses/6_stochastic_processes_2020.pdf">Poisson Process (cont.), Interarrival and Waiting Time Distributions</a></p>
+</li>
+<li>
+<p>Assignment discussion.</p>
+</li>
+</ul>
+<h5 id="week--9">Week  9</h5>
+<ul>
+<li><a href="/Slides/2020s2StochasticProcesses/7_stochastic_processes_2020.pdf">Poisson Process (cont.), Splitting of a Poisson process, Compound Poisson processes, Nonhomogeneous Poisson Processes</a></li>
 </ul>
 <blockquote>
 <p>END</p>
