--- a/public/courses/regression2020/contentreg/index.html
+++ b/public/courses/regression2020/contentreg/index.html
@@ -512,9 +512,9 @@
         <li><a href="#week-1">Week 1</a></li>
         <li><a href="#week-2---3">Week 2 - 3</a></li>
         <li><a href="#week-4">Week 4</a></li>
-        <li><a href="#week-5">Week 5</a></li>
-        <li><a href="#week-6">Week 6</a></li>
+        <li><a href="#week-5---6">Week 5 - 6</a></li>
         <li><a href="#week-7-mid-exam">Week 7: Mid Exam</a></li>
+        <li><a href="#week-7-cont-with-lectures-after-the-mid-exam">Week 7: Cont. with lectures after the Mid Exam</a></li>
         <li><a href="#week-8">Week 8</a></li>
         <li><a href="#week-9">Week 9</a></li>
         <li><a href="#week-10">Week 10</a></li>
@@ -630,7 +630,7 @@
 <blockquote>
 <p>Week 5-6: Discussion/practical (in class)</p>
 </blockquote>
-<h3 id="week-5">Week 5</h3>
+<h3 id="week-5---6">Week 5 - 6</h3>
 <ul>
 <li>
 <p>Coefficient of determination</p>
@@ -650,6 +650,12 @@
 <li>
 <p>Regression analysis with R</p>
 </li>
+<li>
+<p>Problem discussion and Regression Analysis with R</p>
+</li>
+<li>
+<p>Regression analysis with other software (Python, Minitab, SPSS, Excel) <a href="https://edify-thiyanga.netlify.app/regression/othersoftware.html">📚</a></p>
+</li>
 </ul>
 <table>
 <thead>
@@ -662,14 +668,12 @@
 </tr>
 </thead>
 </table>
-<h3 id="week-6">Week 6</h3>
+<blockquote>
+<p>Week 7: mid exam  (in class)</p>
+</blockquote>
+<h3 id="week-7-mid-exam">Week 7: Mid Exam</h3>
+<h3 id="week-7-cont-with-lectures-after-the-mid-exam">Week 7: Cont. with lectures after the Mid Exam</h3>
 <ul>
-<li>
-<p>Problem discussion and Regression Analysis with R</p>
-</li>
-<li>
-<p>Regression analysis with other software (Python, Minitab, SPSS, Excel) <a href="https://edify-thiyanga.netlify.app/regression/othersoftware.html">📚</a></p>
-</li>
 <li>
 <p>Multiple linear regression</p>
 <ul>
@@ -691,21 +695,6 @@
 </ul>
 </li>
 </ul>
-<table>
-<thead>
-<tr>
-<th align="center">📚Slides</th>
-<th align="center">📒 Reading</th>
-<th align="center">📊 Data Sets</th>
-<th align="center">📎 Problems</th>
-<th align="center">🔖Answers</th>
-</tr>
-</thead>
-</table>
-<blockquote>
-<p>Week 7: mid exam  (in class)</p>
-</blockquote>
-<h3 id="week-7-mid-exam">Week 7: Mid Exam</h3>
 <blockquote>
 <p>Week 8-12:  lectures (online)</p>
 </blockquote>
