update covid-19 outbreak scheduled

--- a/public/courses/regression2020/contentreg/index.html
+++ b/public/courses/regression2020/contentreg/index.html
@@ -513,8 +513,6 @@
         <li><a href="#week-2---3">Week 2 - 3</a></li>
         <li><a href="#week-4">Week 4</a></li>
         <li><a href="#week-5---6">Week 5 - 6</a></li>
-        <li><a href="#week-7-mid-exam">Week 7: Mid Exam</a></li>
-        <li><a href="#week-7-cont-with-lectures-after-the-mid-exam">Week 7: Cont. with lectures after the Mid Exam</a></li>
         <li><a href="#week-8">Week 8</a></li>
         <li><a href="#week-9">Week 9</a></li>
         <li><a href="#week-10">Week 10</a></li>
@@ -670,10 +668,15 @@
 </table>
 <p><a href="/Slides/Presentation1.pdf">*</a></p>
 <blockquote>
-<p>Week 7: mid exam  (in class)</p>
+<p>Week 7: lectures  (online)</p>
 </blockquote>
-<h3 id="week-7-mid-exam">Week 7: Mid Exam</h3>
-<h3 id="week-7-cont-with-lectures-after-the-mid-exam">Week 7: Cont. with lectures after the Mid Exam</h3>
+<p>Week 7: R for Reproducible Scientific Analysis - Visit Google Classroom</p>
+<p>Assignment due: 19 Oct 2020</p>
+<p>Mid Exam: Cancelled due to Covid-19 Outbreak</p>
+<blockquote>
+<p>Week 8-12:  lectures (online)</p>
+</blockquote>
+<h3 id="week-8">Week 8</h3>
 <ul>
 <li>
 <p>Multiple linear regression</p>
@@ -693,23 +696,20 @@
 <li>
 <p>Tests on individual regression coefficients</p>
 </li>
-</ul>
+<li>
+<p>Extra-sum-of-squares method</p>
+</li>
+<li>
+<p>Confidence intervals in multiple regression</p>
+</li>
+<li>
+<p>Prediction of new observations</p>
+</li>
+<li>
+<p>Standardized regression coefficients</p>
 </li>
 </ul>
-<blockquote>
-<p>Week 8-12:  lectures (online)</p>
-</blockquote>
-<h3 id="week-8">Week 8</h3>
-<p>Multiple linear regression (cont)</p>
-<pre><code>- Extra-sum-of-squares method
-
-- Confidence intervals in multiple regression
-
-- Prediction of new observations
-
-- Standardized regression coefficients
-</code></pre>
-<ul>
+</li>
 <li>
 <p>Transformations</p>
 <ul>
@@ -721,23 +721,6 @@
 </li>
 <li>
 <p>Analytical methods for selecting a transformation</p>
-</li>
-</ul>
-</li>
-<li>
-<p>Detection and treatment of outliers</p>
-</li>
-<li>
-<p>Lack of fit of regression model</p>
-<ul>
-<li>
-<p>Pure error</p>
-</li>
-<li>
-<p>Model-independent measures of pure error</p>
-</li>
-<li>
-<p>Lack-of-fit test</p>
 </li>
 </ul>
 </li>
@@ -755,6 +738,23 @@
 </table>
 <h3 id="week-9">Week 9</h3>
 <ul>
+<li>
+<p>Detection and treatment of outliers</p>
+</li>
+<li>
+<p>Lack of fit of regression model</p>
+<ul>
+<li>
+<p>Pure error</p>
+</li>
+<li>
+<p>Model-independent measures of pure error</p>
+</li>
+<li>
+<p>Lack-of-fit test</p>
+</li>
+</ul>
+</li>
 <li>
 <p>Generalized least squares</p>
 </li>
