--- a/public/courses/regression2020/contentreg/index.html
+++ b/public/courses/regression2020/contentreg/index.html
@@ -513,6 +513,7 @@
         <li><a href="#week-2---3">Week 2 - 3</a></li>
         <li><a href="#week-4">Week 4</a></li>
         <li><a href="#week-5---6">Week 5 - 6</a></li>
+        <li><a href="#week-7-r-for-reproducible-scientific-analysis---visit-google-classroom">Week 7: R for Reproducible Scientific Analysis - Visit Google Classroom</a></li>
         <li><a href="#week-8">Week 8</a></li>
         <li><a href="#week-9">Week 9</a></li>
         <li><a href="#week-10">Week 10</a></li>
@@ -668,14 +669,11 @@
 </table>
 <p><a href="/Slides/Presentation1.pdf">*</a></p>
 <blockquote>
-<p>Week 7: lectures  (online)</p>
+<p>Week 7 - 8: lectures  (online)</p>
 </blockquote>
-<p>Week 7: R for Reproducible Scientific Analysis - Visit Google Classroom</p>
+<h3 id="week-7-r-for-reproducible-scientific-analysis---visit-google-classroom">Week 7: R for Reproducible Scientific Analysis - Visit Google Classroom</h3>
 <p>Assignment due: 19 Oct 2020</p>
 <p>Mid Exam: Cancelled due to Covid-19 Outbreak</p>
-<blockquote>
-<p>Week 8-12:  lectures (online)</p>
-</blockquote>
 <h3 id="week-8">Week 8</h3>
 <ul>
 <li>
