--- a/public/courses/rmsc2020/contentr/index.html
+++ b/public/courses/rmsc2020/contentr/index.html
@@ -511,6 +511,7 @@ Week 0 Help - R and R Studio Download and Install
         <li><a href="#week-4">Week 4</a></li>
         <li><a href="#week-5">Week 5</a></li>
         <li><a href="#week-6">Week 6</a></li>
+        <li><a href="#week-7-mid-exam--in-class">Week 7: mid exam  (in class)</a></li>
         <li><a href="#week-8">Week 8</a></li>
         <li><a href="#week-9">Week 9</a></li>
         <li><a href="#week-10">Week 10</a></li>
@@ -635,9 +636,7 @@ Week 0 Help - R and R Studio Download and Install
 </tr>
 </thead>
 </table>
-<blockquote>
-<p>Week 7: mid exam  (in class)</p>
-</blockquote>
+<h3 id="week-7-mid-exam--in-class">Week 7: mid exam  (in class)</h3>
 <blockquote>
 <p>Week 8-12:  lectures (online): Covid-19 outbreak</p>
 </blockquote>
@@ -648,7 +647,7 @@ Week 0 Help - R and R Studio Download and Install
 <table>
 <thead>
 <tr>
-<th align="center">📚 <a href="/Slides/l7_reshape_data.html">Slides</a></th>
+<th align="center">📚 <a href="/Slides/2020s1STA5173_0/l7_reshape_data.html">Slides</a></th>
 <th align="center">📒 <a href="https://r4ds.had.co.nz/tidy-data.html">Reading -R4DS Ch12</a></th>
 <th align="center">📊 <a href="https://hellor.netlify.app/cheatsheets/data-wrangling-cheatsheet.pdf">Cheat sheet</a></th>
 <th align="center">📎 Problems</th>
@@ -659,7 +658,7 @@ Week 0 Help - R and R Studio Download and Install
 <ul>
 <li>Data wrangling with dplyr - 1</li>
 </ul>
-<p>| 📚 <a href="/Slides/l7_data_manipulation_with_dplyr.html">Slides</a>  	| 📒 <a href="https://r4ds.had.co.nz/tidy-data.html">Reading -R4DS Ch12</a> 	| 📊 <a href="https://hellor.netlify.app/cheatsheets/data-wrangling-cheatsheet.pdf">Cheat sheet</a>	| 📎 <a href="https://hellor.netlify.app/problems/DataWrangling_Tutorial.pdf">Problems</a> 	| 🔖Answers |</p>
+<p>| 📚 <a href="/Slides/2020s1STA5173_0/l7_data_manipulation_with_dplyr.html">Slides</a>  	| 📒 <a href="https://r4ds.had.co.nz/tidy-data.html">Reading -R4DS Ch12</a> 	| 📊 <a href="https://hellor.netlify.app/cheatsheets/data-wrangling-cheatsheet.pdf">Cheat sheet</a>	| 📎 <a href="https://hellor.netlify.app/problems/DataWrangling_Tutorial.pdf">Problems</a> 	| 🔖Answers |</p>
 <h3 id="week-9">Week 9</h3>
 <ul>
 <li>The grammar of graphics</li>
