--- a/public/slides/2020s1STA5173_0/l7_data_manipulation_with_dplyr.html
+++ b/public/slides/2020s1STA5173_0/l7_data_manipulation_with_dplyr.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>STA 326 2.0 Programming and Data Analysis with R</title>
+    <title>STA 517 3.0 Programming and Statistical Computing with R</title>
     <meta charset="utf-8" />
     <meta name="author" content="Dr Thiyanga Talagala" />
-    <meta name="date" content="2020-09-27" />
+    <meta name="date" content="2020-10-11" />
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/remark-css/default-fonts.css" rel="stylesheet" />
     <link href="libs/remark-css/duke-blue.css" rel="stylesheet" />
@@ -16,10 +16,10 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# STA 326 2.0 Programming and Data Analysis with R
+# STA 517 3.0 Programming and Statistical Computing with R
 ## Data Manipulation with dplyr
 ### Dr Thiyanga Talagala
-### 27 September 2020
+### 11 October 2020
 
 ---
 
