--- a/public/courses/regression2020/contentreg/index.html
+++ b/public/courses/regression2020/contentreg/index.html
@@ -513,7 +513,7 @@
         <li><a href="#week-2---3">Week 2 - 3</a></li>
         <li><a href="#week-4">Week 4</a></li>
         <li><a href="#week-5---6">Week 5 - 6</a></li>
-        <li><a href="#week-7-r-for-reproducible-scientific-analysis---visit-google-classroom">Week 7: R for Reproducible Scientific Analysis - Visit Google Classroom</a></li>
+        <li><a href="#week-7">Week 7</a></li>
         <li><a href="#week-8">Week 8</a></li>
         <li><a href="#week-9">Week 9</a></li>
         <li><a href="#week-10">Week 10</a></li>
@@ -671,7 +671,8 @@
 <blockquote>
 <p>Week 7 - 8: lectures  (online)</p>
 </blockquote>
-<h3 id="week-7-r-for-reproducible-scientific-analysis---visit-google-classroom">Week 7: R for Reproducible Scientific Analysis - Visit Google Classroom</h3>
+<h3 id="week-7">Week 7</h3>
+<p><a href="https://edify-thiyanga.netlify.app/regression/simplelinearregression2">R for Reproducible Scientific Analysis - Visit Google Classroom</a></p>
 <p>Assignment due: 19 Oct 2020</p>
 <p>Mid Exam: Cancelled due to Covid-19 Outbreak</p>
 <h3 id="week-8">Week 8</h3>
